--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ jupyter_server==2.5.0
 jupyter_server_terminals==0.4.4
 jupyterlab-pygments==0.2.2
 kiwisolver==1.4.4
+lxml==4.9.2
 MarkupSafe==2.1.2
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
@@ -66,7 +67,9 @@ Pygments==2.15.1
 pyparsing==3.0.9
 pyrsistent==0.19.3
 python-dateutil==2.8.2
+python-docx==0.8.11
 python-json-logger==2.0.7
+python-pptx==0.6.21
 pytz==2023.3
 PyYAML==6.0
 pyzmq==25.0.2
@@ -87,3 +90,4 @@ wcwidth==0.2.6
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.5.1
+XlsxWriter==3.1.0
